RESOLVED FIXED114793
REGRESSION(r148639): It broke Qt Mountain Lion Release
https://bugs.webkit.org/show_bug.cgi?id=114793
Summary REGRESSION(r148639): It broke Qt Mountain Lion Release
Zoltan Arvai
Reported 2013-04-18 01:25:37 PDT
/Users/admin/work/WebKit-BuildSlave/qt-mountainlion-release/build/Source/WTF/wtf/CurrentTime.cpp:339:5: error: unknown type name 'mach_msg_type_number_t' mach_msg_type_number_t infoCount = THREAD_BASIC_INFO_COUNT; ^ /Users/admin/work/WebKit-BuildSlave/qt-mountainlion-release/build/Source/WTF/wtf/CurrentTime.cpp:339:40: error: use of undeclared identifier 'THREAD_BASIC_INFO_COUNT' mach_msg_type_number_t infoCount = THREAD_BASIC_INFO_COUNT; ^ /Users/admin/work/WebKit-BuildSlave/qt-mountainlion-release/build/Source/WTF/wtf/CurrentTime.cpp:340:5: error: unknown type name 'thread_basic_info_data_t' thread_basic_info_data_t info; ^ /Users/admin/work/WebKit-BuildSlave/qt-mountainlion-release/build/Source/WTF/wtf/CurrentTime.cpp:343:30: error: use of undeclared identifier 'mach_thread_self'; did you mean 'pthread_self'? mach_port_t threadPort = mach_thread_self(); ^~~~~~~~~~~~~~~~ pthread_self /usr/include/pthread.h:349:11: note: 'pthread_self' declared here pthread_t pthread_self(void); ^ /Users/admin/work/WebKit-BuildSlave/qt-mountainlion-release/build/Source/WTF/wtf/CurrentTime.cpp:343:17: error: cannot initialize a variable of type 'mach_port_t' (aka 'unsigned int') with an rvalue of type 'pthread_t' (aka '_opaque_pthread_t *') mach_port_t threadPort = mach_thread_self(); ^ ~~~~~~~~~~~~~~~~~~ /Users/admin/work/WebKit-BuildSlave/qt-mountainlion-release/build/Source/WTF/wtf/CurrentTime.cpp:345:26: error: use of undeclared identifier 'mach_task_self' mach_port_deallocate(mach_task_self(), threadPort); ^ 6 errors generated.
Attachments
Speculative fix. (879 bytes, patch)
2013-04-18 04:25 PDT, Zoltan Arvai
no flags
Zoltan Arvai
Comment 1 2013-04-18 01:30:23 PDT
Maybe in http://trac.webkit.org/changeset/148639/trunk/Source/WTF/wtf/CurrentTime.cpp #if PLATFORM(MAC) #include <mach/mach.h> should be #if OS(DARWIN) ...
Zoltan Arvai
Comment 2 2013-04-18 04:25:26 PDT
Created attachment 198719 [details] Speculative fix.
Mark Lam
Comment 3 2013-04-18 09:55:59 PDT
Comment on attachment 198719 [details] Speculative fix. LGTM, but need someone else to r+.
WebKit Commit Bot
Comment 4 2013-04-18 10:49:42 PDT
Comment on attachment 198719 [details] Speculative fix. Clearing flags on attachment: 198719 Committed r148684: <http://trac.webkit.org/changeset/148684>
WebKit Commit Bot
Comment 5 2013-04-18 10:49:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.