Speculative build fix for Qt Mountain Lion Release after r148639. https://bugs.webkit.org/show_bug.cgi?id=114793

Reviewed by Michael Saboff.

* wtf/CurrentTime.cpp:


Canonical link: https://commits.webkit.org/133206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148684 268f45cc-cd09-0410-ab3c-d52691b4dbfc